# metrajmatik

./: Cargo.toml  README.md  YAKLASIK_MALIYET_RAPORU.md  doc.md  metrajmatik_veriler.db
src/: app.rs  bicim.rs  database.rs  export.rs  hakedis.rs  is_grubu.rs  main.rs  maliyet.rs  models.rs  pdf_parser.rs  tema.rs  tuik.rs
src/app/: analiz_ui.rs  gorunum_diger.rs  gorunum_metraj.rs  hakedis_ui.rs  is_programi_ui.rs  islemler.rs  mod.rs  proje_ui.rs
