[package]
name = "metrajmatik"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
rusqlite = { version = "0.33", features = ["bundled"] }
pdf-extract = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_xlsxwriter = "0.83"
regex = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
once_cell = "1"